[project]
name = "m0wut_drivers"
version = "0.0.1"
authors = [{ name = "M0WUT", email = "m0wutradio@gmail.com" }]
description = "M0WUT Python drivers for various ICs on embedded platforms"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["smbus2", "gpsd-py3"]

[project.urls]
Homepage = "https://github.com/M0WUT/python-drivers"
Issues = "https://github.com/M0WUT/python-drivers/issues"
